# Secure-Soroban

./: .gitignore  README.md  action.yml  combined_report.json
.github/workflows/: secure-soroban.yml  stellar-shield.yml
scripts/: ai_agent_attacker.py  ai_agent_report.json  combined_report.json  detect_auth_bypass.py  detect_integer_overflow.py  detect_reentrancy.py  detect_static.py  detect_unauthorized_drain.py  recovery_task.json  run_all.py
vulnerable_contracts/escrow/contracts/fungible-allowlist/: Cargo.toml
vulnerable_contracts/escrow/contracts/payment-channel/: Cargo.toml
